# Sem2-Lab1-DynArr

./: .gitignore  CMakeLists.txt  console_utils.c  console_utils.h  dynamic_array.c  dynamic_array.h  main.c  type_info.c  type_info.h  utils.c  utils.h  vector.c  vector.h  vector3d.c  vector3d.h
test/: test_dynamic_array.c  test_example.c  test_vector.c
